an added featur section fact section and footer

--- a/index.html
+++ b/index.html
@@ -65,10 +65,70 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
+
+        <section class="fact-section">
+            <h1 class="fact-title dark-1">Some Facts</h1>
+            <p class="fact-description dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+
+            <!-- .fact-container>.fact*4>img.fact-icon+h3.fact-num+h5.fact-name -->
+
+            <div class="fact-container">
+                <div class="fact">
+                    <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                    <h3 class="fact-num dark-2">54</h3>
+                    <h5 class="fact-name">Awards Winnings</h5>
+                </div>
+                <div class="fact">
+                    <img src="images/icons/projects.png" alt="" class="fact-icon">
+                    <h3 class="fact-num dark-2">1458</h3>
+                    <h5 class="fact-name">Project Finished</h5>
+                </div>
+                <div class="fact">
+                    <img src="images/icons/customers.png" alt="" class="fact-icon">
+                    <h3 class="fact-num dark-2">590</h3>
+                    <h5 class="fact-name">Clients Worked</h5>
+                </div>
+                <div class="fact">
+                    <img src="images/icons/email.png" alt="" class="fact-icon">
+                    <h3 class="fact-num dark-2">22578</h3>
+                    <h5 class="fact-name">Email Send</h5>
+                </div>
+            </div>
+        </section>
+
+        <section class="sponsor">
+            <div class="sponsor-info">
+                <h1 class="sponsor-title dark-1">
+                    Our Sponsors
+                </h1>
+                <p class="sponsor-description dark-3">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+                </p>
+            </div>
+            <div class="companys">
+                <div class="conpany">
+                    <img src="images/sponsors/spotify.png" alt="" class="company-name">
+                </div>
+                <div class="conpany">
+                    <img src="images/sponsors/amazon.png" alt="" class="company-name">
+                </div>
+                <div class="conpany">
+                    <img src="images/sponsors/google.png" alt="" class="company-name">
+                </div>
+                <div class="conpany">
+                    <img src="images/sponsors/telerama.png" alt="" class="company-name">
+                </div>
+                <div class="conpany">
+                    <img src="images/sponsors/figma.png" alt="" class="company-name">
+                </div>
+            </div>
+        </section>
     </main>
 
-    <footer>
-
+    <footer class="footer">
+        <h5 class="footer-contant dark-2">
+            All rights reserved copyright@2023 startup landing page design
+        </h5>
     </footer>
     <script src="https://kit.fontawesome.com/f8872d1cf3.js" crossorigin="anonymous"></script>
 </body>
